# BlockArchive

./: .gitignore  README.md  blockarchive.spec  pyproject.toml
src/blockarchive/: __init__.py  __main__.py  app.py  archiver.py  history_store.py  index_store.py  manager.py  models.py  settings.py
src/blockarchive/ui/: __init__.py  main_window.py  worker.py
tests/: test_archiver.py  test_manager.py  test_support.py
