[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blockarchive"
version = "0.1.1"
description = "Safe per-project HDD archival desktop app for Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<7",
]

[project.scripts]
blockarchive = "blockarchive.app:main"

[project.optional-dependencies]
build = [
  "pyinstaller>=6.15,<7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
